# EdgeRunner

./: .env  .gitignore  BLUEPRINT.md  README.md  SECURITY.md  llm.worker.ts  next.config.mjs  package-lock.json  package.json
app/: page.tsx
backend/: agent.py  er_agent.py  hermes_engine.py  kaggle_worker.tmpl  main.py  mcp_config.example.json  model_manager.py  openai_shim.py  pyproject.toml  requirements.txt  schemas.py  session_control.py
backend/app/: __init__.py  catalog.py  config.py  main.py  sampling.py  schemas.py  session.py  tools.py
backend/app/harnesses/: __init__.py  agent.py  base.py  echo.py  llamacpp.py
backend/app/kaggle/: __init__.py  client.py  controller.py  packer.py
backend/app/routers/: catalog.py  chat.py  kaggle.py  passthrough.py  session.py
backend/harness/: __init__.py  agent_loop.py  commands.py  generate.py  language.py  llm_bridge.py  mcp_client.py  phased_loop.py  pipeline.py  prompts.py  routing.py  sandbox.py  thinking.py  workspace.py
backend/harness/tools/: __init__.py  registry.py
backend/tests/: test_agent.py  test_api.py  test_harness_unit.py  test_kaggle.py  test_llamacpp.py  test_sampling.py  test_session.py
deploy/: README.md  kaggle_bootstrap.sh
docs/: HARNESS.md
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
kaggle/: README.md  run_on_kaggle.py
kaggle_worker/: bootstrap.py
lib/: gemma.ts  memory.ts  tts.ts
orchestrator/: __init__.py  kaggle_client.py  main.py  packer.py  requirements.txt  session_manager.py
scripts/: dev.sh  kaggle_build_wheels.py  (+2 more)
(+65 files in other folders)
